# test-repo

./: .continue-here.md  MIDTERM_CHECKLIST.md  TENSORRT_GUIDE.md  TROUBLESHOOTING.md  copy_model_to_go2.bat  start_inspection.sh
docs/midterm_presentation/: PPT_OUTLINE.md
inspection_system/: .continue-here.md  upload3.js  备忘手册.md  问题.md
inspection_system/.opencode/memory-core/: ses_2b88a3a65ffeS2XWMeu0V1y3Dc.json
inspection_system/.opencode/memory-working/: ses_2b7bd2d88ffek7b4ZgzAaJmPMK_pressure.json  ses_2b88a3a65ffeS2XWMeu0V1y3Dc_compaction.json  ses_2e67d0d6dffe0dZjKyHNieKddS.json  ses_2e67d0d6dffe0dZjKyHNieKddS_pressure.json
inspection_system/.opencode/memory-working/tool-outputs/ses_2b88a3a65ffeS2XWMeu0V1y3Dc/: call_68ec121e241d1c6c.json  call_function_0jxzl335ybrn_1.json
inspection_system/.planning/: HANDOFF.json
inspection_system/.planning/reports/: SESSION_REPORT_20260401.md
inspection_system/docs/: setup_guide.md
inspection_system/scripts/: convert_to_tensorrt.py
inspection_system/src/inspection_perception/inspection_perception/: yolo_detector.py
inspection_system/src/inspection_perception/launch/: perception.launch.py
inspection_system/src/inspection_viz/static/: map_viewer.js
src/inspection_perception/: package.xml  setup.py
src/inspection_perception/launch/: perception.launch.py
src/inspection_viz/: package.xml  setup.py
